syntax = "proto3";
package rpc;
import "base.proto";

// 6000 ~ 7000
// RPC用于服务器之间的通信，不予客户端通信
enum LoginRPC {
    LOGIN_RPC_NONE = 0;

    REQ_PROXY_CONNECT_VERIFY = 6000; // 来自代理服务器的验证请求
    ACK_PROXY_CONNECT_VERIFY = 6001;   
}